# fty-discovery-ng

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  README.md
client/: CMakeLists.txt
client/fty/discovery/: client.h
client/src/: client.cpp
common/: CMakeLists.txt  commands.cpp  commands.h  discovery-config-manager.cpp  discovery-config-manager.h  discovery-config.cpp  discovery-config.h  discovery-task.h  message-bus-amqp-client.cpp  message-bus-amqp-client.h  message-bus.cpp  message-bus.h  message.cpp  message.h
conf/: discovery.conf
exec/: CMakeLists.txt
exec/include/: include.hpp
exec/src/: daemon.cpp
mibs/: BESTPOWER-MIB  EATON-EPDU-PU-SW-MIB  MG-SNMP-UPS-MIB
packaging/debian/: changelog  control  copyright  fty-discovery-ng-dev.install  fty-discovery-ng.install
rest/: CMakeLists.txt
rest/conf/: 42_discovery.xml.in
rest/src/: asset.cpp  asset.h  auto.cpp  auto.h  config-create.cpp  config-create.h  config-read.cpp  config-read.h  config.cpp  config.h  discovery-rest.h  mibs.cpp  mibs.h  protocols.cpp  protocols.h  scan-start.cpp  scan-start.h  scan-status.cpp  scan-status.h  scan-stop.cpp  scan-stop.h  scan.cpp  scan.h
server/: CMakeLists.txt  fty-discovery-ng.service  fty-discovery-ng.service.in
server/conf/: config-discovery.conf.in  discovery.conf  discovery.conf.in  fty-discovery-ng.conf.in  logger.conf.in
server/mibs/: ACS-MIB  CPQHOST-MIB  CPQPOWER-MIB  CPQPOWER-MIB.MIB  DeltaUPS-MIB  EATON-EPDU-MIB  EATON-GENESIS-II-MIB  EATON-PDU-MIB  Eaton_EPDU_NLOGIC.MIB  PDU2-MIB  SOCOMECUPS-MIB  TRIPPUPS1-MIB  XUPS-MIB  bayuniv-5031.mib
server/src/: config.h  discovery.cpp  discovery.h  main.cpp
server/src/jobs/: assets.cpp  assets.h  auto-discovery.cpp  auto-discovery.h  chaineddevices.cpp  chaineddevices.h  common.cpp  common.h  configure.cpp  configure.h  create-asset.cpp  create-asset.h  discover.cpp  discover.h  mibs.cpp  mibs.h  protocols.cpp  protocols.h  scan-start.cpp  scan-start.h  scan-status.cpp  scan-status.h  scan-stop.cpp  scan-stop.h
server/src/jobs/impl/: address.cpp  address.h  basic-info.h  create-asset.cpp.sav  create-asset.h  credentials.cpp  credentials.h  mibs.cpp  mibs.h  neon.cpp  neon.h  nut.cpp  nut.h  ping.h  snmp.cpp  snmp.h  uuid.cpp  uuid.h  xml-pdc.cpp  xml-pdc.h
server/src/jobs/protocols/: neon.cpp  nut.cpp  nut.h  ping.h  snmp.cpp  snmp.h  xml-pdc.h
server/test/: CMakeLists.txt  address.cpp  assets.cpp  auto-disco.cpp  discovery-config-manager.cpp  main.cpp  mibs.cpp  protocols.cpp  test-common.cpp  test-common.h
server/test/assets/: epdu.147.snmprec  error.py  mge.125.snmprec  mge.191.snmprec  record.sh  xups.159.snmprec  xups.238.snmprec
server/test/conf/: config-discovery.conf  discovery.conf  logger.conf
server/test/root/: lenovo.181.snmprec  mge.191.snmprec  xups.159.snmprec
src/: config.h  daemon.cpp  daemon.h  discovery.cpp  discovery.h  main.cpp  message-bus.cpp  message-bus.h  message.cpp  message.h
src/jobs/: chaineddevices.cpp  chaineddevices.h  common.h  configure.cpp  configure.h  discover.cpp  discover.h
src/jobs/protocols/: neon.cpp  neon.h  snmp.cpp  snmp.h  socket.cpp  socket.h  xml-pdc.cpp  xml.cpp  xml.h
test/: CMakeLists.txt  address.cpp  assets.cpp  auto-disco.cpp  discovery-config-manager.cpp  discovery-config.cpp  main.cpp  mibs.cpp  protocols.cpp  test-common.cpp  test-common.h
test/assets/: 10.130.38.159.snmprec  10.130.38.181.snmprec  10.130.38.191.snmprec  10.130.38.238.snmprec  cpqpqwer.114.snmprec  epdu.147.snmprec  mge.125.snmprec
test/conf/: config-discovery.conf  data.json  discovery.conf
test/root/: 10.130.38.114.snmprec  10.130.38.125.snmprec  10.130.38.238.snmprec  ats.100.snmprec  epdu.147.snmprec  record.sh
(+4 files in other folders)
